@@ -2,6 +2,8 @@
 
 	* src/anytime.cpp: Minor update setting Boost define
 
+	* R/anytime.R: Two more #nocov tags
+
 2018-11-07  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Rolled minor version
